# application-project-nhs-proms

./: .gitignore  LICENSE  Laurence-Treebeard-steps-to-build.md  Makefile  README.md  Treebeard-steps-to-build.md  environment.yaml  environment.yml  index.ipynb  pyproject.toml  requirements.txt  setup.py  treebeard-setup.md  treebeard.yaml
data/interim/: hip-ccg.parquet  hip-ccg.parquet.REMOVED.git-id  hip-provider.parquet  hip-provider.parquet.REMOVED.git-id  knee-ccg.parquet.REMOVED.git-id  knee-provider.parquet.REMOVED.git-id
docs/: Makefile  conf.py  index.rst  make.bat
notebooks/: 0.0-test-environment.ipynb  1.0-data-understanding.ipynb  1.1-collect-initial-data.ipynb  2.0-data-preparation.ipynb  2.0-data-understanding.ipynb  2.0-dk-data-understanding.ipynb  2.1-collect-initial-data.ipynb  2.1-dk-collect-initial-data.ipynb  3.0-data-preparation.ipynb  3.0-modeling-regression.ipynb  3_0_data_preparation.ipynb  4.0-modeling-classification-auto-sklearn.ipynb  4.0-modeling-classification.ipynb  4.0-modeling-clustering-classification.ipynb  4.0-modeling-clustering-classification.ipynb.REMOVED.git-id
notebooks/one-day-workshop/: crisp-in-one-day.ipynb  handson-ml2.yml  precision-recall-is-more-informative.ppt.REMOVED.git-id
references/: outline.md
references/nhs/: proms_data_dictionary.pdf.REMOVED.git-id
