[tool.poetry]
name = "jads-nhs-proms"
version = "0.1.0"
description = "fA data science case study of the NHS Digital PROMs data of hip and knee replacements."
authors = ["Daniel Kapitan <daniel@kapitan.net>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.7"
pandas = "^1"
numpy = "^1.19.1"
yellowbrick = "^1.1"
matplotlib = "^3.3.0"
seaborn = "^0.10.1"
ipykernel = "^5.3.4"
pyarrow = "^1.0.0"
imbalanced-learn = "^0.7.0"
toolz = "^0.10.0"
jupyter = "^1.0.0"
xgboost = "^1.2.0"
qgrid = "^1.3.1"
spacy = "^2.3.2"

[tool.poetry.dev-dependencies]
dephell = "^0.8.3"
black = "^19.10b0"

[tool.dephell.main]
from = {format = "poetry", path = "pyproject.toml"}
to = {format = "setuppy", path = "setup.py"}

[tool.dephell.pip]
from = {format = "poetry", path = "pyproject.toml"}
to = {format = "pip", path = "requirements.txt"}

[tool.dephell.conda]
from = {format = "poetry", path = "pyproject.toml"}
to = {format = "conda", path = "environment.yaml"}

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

